@@ -1,4 +1,5 @@
 plugins {
+	id 'application'
 	id 'java'
 	id 'jacoco'
 	id 'eclipse'
@@ -19,6 +20,8 @@ repositories {
 
 dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation platform('org.junit:junit-bom:5.10.0')
+	testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
@@ -36,4 +39,12 @@ jacocoTestReport {
         xml.required = false
         csv.required = false
     }
+}
+
+application {
+   mainClass ='sco3.Main'
+}
+
+tasks.withType (JavaExec) {
+   jvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
